fix: bug review and cleanup
- Handle idempotency race condition (DataIntegrityViolationException → 409)
- Add input validation on transaction request DTOs
- Create LedgerEntryResponse DTO to prevent domain leaking
- Enforce AccountStatus.CLOSED via AccountClosedException
- Fix NaN handling in demo app parseFloat
- Remove deprecated docker-compose version key
- Add LedgerEntryRepository.save() for single entries
- Modernize Collectors.toList() → .toList()